--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     </div>
     <center>
     <div class="siteIntro">
-      <h1>Maybi Games has what maybi games you can play. Try em' out.</h1>
+      <h1>Play some free unblocked flash games in the box to the left.<b> New content coming soon!</h1>
     </div>
   </center>
   </body>
