--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html lang="en">
   <head>
+    <link rel="shortcut icon" type="png" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <style>
       body {
