--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         margin: 10px;
         line-height: 100px;
         color: black;
+        font-size: 22px;
         border-radius: 25px;
         font-family: Montserrat;
         border: solid grey;
