--- a/Maybi_AgeOfWar.html
+++ b/Maybi_AgeOfWar.html
@@ -115,6 +115,7 @@
     </div>
     <div class="gameContainer">
       <center>
+        <h3 style="font-family: Montserrat">Age of War</h3>
         <embed src="Maybi_AgeOfWar.swf">
       </center>
     </div>
