--- a/Maybi_Flight.html
+++ b/Maybi_Flight.html
@@ -115,6 +115,7 @@
     </div>
     <div class="gameContainer">
       <center>
+        <h3 style="font-family: Montserrat">Flight</h3>
         <embed src="Maybi_Flight.swf">
       </center>
     </div>
