--- a/Maybi_StickWar.html
+++ b/Maybi_StickWar.html
@@ -115,6 +115,7 @@
     </div>
     <div class="gameContainer">
       <center>
+        <h3 style="font-family: Montserrat">Stick Wars</h3>
         <embed src="Maybi_StickWar.swf">
       </center>
     </div>
