--- a/Maybi_TankTrouble.html
+++ b/Maybi_TankTrouble.html
@@ -115,6 +115,7 @@
     </div>
     <div class="gameContainer">
       <center>
+        <h3 style="font-family: Montserrat">Tank Trouble</h3>
         <embed src="Maybi_TankTrouble.swf">
       </center>
     </div>
