--- a/Maybi_Tetris.html
+++ b/Maybi_Tetris.html
@@ -115,6 +115,7 @@
     </div>
     <div class="gameContainer">
       <center>
+        <h3 style="font-family: Montserrat">Tetris</h3>
         <embed src="Maybi_Tetris.swf">
       </center>
     </div>
