--- a/index.html
+++ b/index.html
@@ -93,8 +93,14 @@
        <a href="Maybi_AgeOfWar.html">Age of War</a>
        <a href="Maybi_BTD3.html">Bloons TD 3</a>
        <a href="Maybi_BTD4.html">Bloons TD 4</a>
+       <a href="Maybi_DuckHunt.html">Duck Hunt</a>
+       <a href="Maybi_FancyPants.html">Fancy Pants</a>
+       <a href="Maybi_FancyPants2.html">Fancy Pants 2</a>
        <a href="Maybi_Flight.html">Flight</a>
+       <a href="Maybi_Jacksmith.html">Jacksmith</a>
        <a href="Maybi_StickWar.html">Stick War</a>
+       <a href="Maybi_StickWar2.html">Stick War 2</a>
+       <a href="Maybi_SushiCat.html">Sushi Cat</a>
        <a href="Maybi_TankTrouble.html">Tank Trouble</a>
        <a href="Maybi_Tetris.html">Tetris</a>
      </div>
