--- a/Maybi_StickWar.html
+++ b/Maybi_StickWar.html
@@ -121,7 +121,7 @@
     </div>
     <div class="gameContainer">
       <center>
-        <h3 style="font-family: Montserrat">Stick Wars</h3>
+        <h3 style="font-family: Montserrat">Stick War</h3>
         <embed src="Maybi_StickWar.swf">
       </center>
     </div>
