--- a/Maybi_AgeOfWar.html
+++ b/Maybi_AgeOfWar.html
@@ -106,7 +106,7 @@
   <body>
 
     <div class="topbarNav" id="topbarNav">
-      <h1 id="siteTitle" onclick="maybi-games.com">Maybi Games</h1>
+      <h1 id="siteTitle" onclick="titleRedirect()">Maybi Games</h1>
     </div>
 
     <div class="sidebarNav" id="sidebarNav">
