--- a/Maybi_FancyPants.html
+++ b/Maybi_FancyPants.html
@@ -95,12 +95,18 @@
         border-color: rgb(85, 85, 85);
       }
     </style>
+    
+    <script>
+      function titleRedirect () {
+        window.location.href = "maybi-games.com";
+      }
+    </script>
   </head>
 
   <body>
 
     <div class="topbarNav" id="topbarNav">
-      <h1 id="siteTitle">Maybi Games</h1>
+      <h1 id="siteTitle" onclick="titleRedirect()">Maybi Games</h1>
     </div>
 
     <div class="sidebarNav" id="sidebarNav">
