--- a/Maybi_AgeOfWar.html
+++ b/Maybi_AgeOfWar.html
@@ -98,7 +98,7 @@
     
     <script>
       function titleRedirect () {
-        window.location.href = "maybi-games.com";
+        window.location.href = "index.html";
       }
     </script>
   </head>
