--- a/Maybi_BTD4.html
+++ b/Maybi_BTD4.html
@@ -28,7 +28,7 @@
         top: 0px;
         left: 50px;
         padding: 0px;
-        cursor: default;
+        cursor: pointer;
         position: fixed;
       }
 
