--- a/Maybi_DuckHunt.html
+++ b/Maybi_DuckHunt.html
@@ -28,7 +28,7 @@
         top: 0px;
         left: 50px;
         padding: 0px;
-        cursor: default;
+        cursor: pointer;
         position: fixed;
       }
 
@@ -95,12 +95,17 @@
         border-color: rgb(85, 85, 85);
       }
     </style>
+    <script>
+      function titleRedirect () {
+       window.location.href = "index.html";
+      }
+    </script>
   </head>
 
   <body>
 
     <div class="topbarNav" id="topbarNav">
-      <h1 id="siteTitle">Maybi Games</h1>
+      <h1 id="siteTitle" onclick="titleRedirect()">Maybi Games</h1>
     </div>
 
     <div class="sidebarNav" id="sidebarNav">
