--- a/Maybi_AgeOfWar.html
+++ b/Maybi_AgeOfWar.html
@@ -114,11 +114,13 @@
       <a href="Maybi_AgeOfWar.html"><div>Age of War</div></a>
       <a href="Maybi_BTD3.html"><div>Bloons TD 3</div></a>
       <a href="Maybi_BTD4.html"><div>Bloons TD 4</div></a>
+      <a href="Maybi_ClickerHeroes.html"><div>Clicker Heroes</div></a>
       <a href="Maybi_DuckHunt.html"><div>Duck Hunt</div></a>
       <a href="Maybi_FancyPants.html"><div>Fancy Pants</div></a>
       <a href="Maybi_FancyPants2.html"><div>Fancy Pants 2</div></a>
       <a href="Maybi_Flight.html"><div>Flight</div></a>
       <a href="Maybi_Jacksmith.html"><div>Jacksmith</div></a>
+      <a href="Maybi_Raze.html"><div>Raze</div></a>
       <a href="Maybi_StickWar.html"><div>Stick War</div></a>
       <a href="Maybi_StickWar2.html"><div>Stick War 2</div></a>
       <a href="Maybi_SushiCat.html"><div>Sushi Cat</div></a>
