--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <style>
      body {
          margin: 0px;
-         background-image: linear-gradient(0deg, rgb(255, 200, 200), rgb(255, 255, 200), rgb(200, 255, 200), rgb(200, 255, 255), rgb(200, 200, 255), rgb(255, 200, 255), rgb(255, 200, 200));
+         background-image: linear-gradient(135deg, rgb(255, 180, 150), rgb(255, 170, 255));
      }
 
      a {
