--- a/index.html
+++ b/index.html
@@ -91,8 +91,10 @@
      <h1>Maybi you want to play some games?</h1>
      <div class="previewLinks" id="homeGames">
        <a href="Maybi_AgeOfWar.html">Age of War</a>
+       <a href="Maybi_AgeOfWar2.html">Age of War 2</a>
        <a href="Maybi_BTD3.html">Bloons TD 3</a>
        <a href="Maybi_BTD4.html">Bloons TD 4</a>
+       <a href="Maybi_BTD5.html">Bloons TD 5</a>
        <a href="Maybi_ClickerHeroes.html">Clicker Heroes</a>
        <a href="Maybi_DuckHunt.html">Duck Hunt</a>
        <a href="Maybi_FancyPants.html">Fancy Pants</a>
