--- a/Maybi_Tetris.html
+++ b/Maybi_Tetris.html
@@ -111,8 +111,10 @@
     <div class="sidebarNav" id="sidebarNav">
       <h3 id="sidebarNavTitle">Play Games</h3>
       <a href="Maybi_AgeOfWar.html"><div>Age of War</div></a>
+      <a href="Maybi_AgeOfWar2.html"><div>Age of War 2</div></a>
       <a href="Maybi_BTD3.html"><div>Bloons TD 3</div></a>
       <a href="Maybi_BTD4.html"><div>Bloons TD 4</div></a>
+      <a href="Maybi_BTD5.html"><div>Bloons TD 5</div></a>
       <a href="Maybi_ClickerHeroes.html"><div>Clicker Heroes</div></a>
       <a href="Maybi_DuckHunt.html"><div>Duck Hunt</div></a>
       <a href="Maybi_FancyPants.html"><div>Fancy Pants</div></a>
