--- a/Maybi_TankTrouble.html
+++ b/Maybi_TankTrouble.html
@@ -126,12 +126,11 @@
       <a href="Maybi_StickWar2.html"><div>Stick War 2</div></a>
       <a href="Maybi_SushiCat.html"><div>Sushi Cat</div></a>
       <a href="Maybi_TankTrouble.html"><div>Tank Trouble</div></a>
-      <a href="Maybi_Tetris.html"><div>Tetris</div></a>/div></a>
       <a href="Maybi_Tetris.html"><div>Tetris</div></a>
     </div>
     <div class="gameContainer">
       <center>
-        <h3 style="font-family: Montserrat">Tank Trouble may be temporarily unavailable.</h3>
+        <h3 style="font-family: Montserrat">Tank Trouble</h3>
         <embed src="Maybi_TankTrouble.swf">
       </center>
     </div>
