--- a/Maybi_DuckHunt.html
+++ b/Maybi_DuckHunt.html
@@ -82,7 +82,7 @@
         margin-left: 200px;
         margin-top: 100px;
         width: calc(100%-200px);
-        height: 600px;
+        height: calc(100%-80px);
         overflow: hidden;
       }
 
