--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
      }
 
      .previewLinks a {
-       background-image: linear-gradient(-45deg, rgba(100, 100, 100, 0.4), rgba(255, 255, 255, 0.4));
+       background-image: linear-gradient(145deg, rgba(255, 255, 255, 0.4), rgba(170, 170, 170, 0.4));
        display: inline-block;
        width: 200px;
        height: 100px;
@@ -57,7 +57,7 @@
        color: black;
        border-radius: 25px;
        font-family: Montserrat;
-       border: solid grey;
+       border: solid rgba(0, 0, 0, 0.5); 4px;
        transition: 0.3s;
      }
 
