--- a/Maybi_Raze.html
+++ b/Maybi_Raze.html
@@ -88,11 +88,33 @@
 
       embed {
         height: 450px;
-        width: 520px;
+        width: 650px;
         border-style: solid;
         border-width: 4px;
-        border-radius: 10px;
+        border-radius: 0px;
         border-color: rgb(85, 85, 85);
+      }
+
+      @keyframes fadein {
+        from { opacity: 0}
+        to   { opacity: 1}
+      }
+
+      button {
+        margin-top: 25px;
+        height: 50px;
+        width: 100px;
+        color: black;
+        font-size: 14px;
+        background-color: rgb(160, 160, 255);
+        border: solid rgba(0, 0, 0, 0);
+        border-radius: 5px;
+        outline: none;
+        cursor: pointer;
+      }
+
+      button:hover {
+        filter: brightness(85%);
       }
     </style>
 
