--- a/Maybi_AgeOfWar2.html
+++ b/Maybi_AgeOfWar2.html
@@ -143,7 +143,9 @@
     <div class="gameContainer">
       <center>
         <h3 style="font-family: Montserrat">Age of War 2</h3>
-        <embed src="Maybi_AgeOfWar2.swf">
+        <embed src="Maybi_AgeOfWar2.swf" id="game"><br>
+        <button onclick="shrinkGame()" style="background-color: rgb(255, 160, 160)">&#8594;&#8592;</button>
+        <button onclick="growGame()" style="background-color: rgb(160, 255, 160)">&#8592;&#8594;</button>
       </center>
     </div>
   </body>
