--- a/Maybi_Raze.html
+++ b/Maybi_Raze.html
@@ -154,7 +154,9 @@
     <div class="gameContainer">
       <center>
         <h3 style="font-family: Montserrat">Raze</h3>
-        <embed src="Maybi_Raze.swf">
+        <embed src="Maybi_Raze.swf" id="game"><br>
+        <button onclick="shrinkGame()" style="background-color: rgb(255, 160, 160)">&#8594;&#8592;</button>
+        <button onclick="growGame()" style="background-color: rgb(160, 255, 160)">&#8592;&#8594;</button>
       </center>
     </div>
   </body>
