--- a/Maybi_TankTrouble.html
+++ b/Maybi_TankTrouble.html
@@ -153,7 +153,9 @@
     <div class="gameContainer">
       <center>
         <h3 style="font-family: Montserrat">Tank Trouble</h3>
-        <embed src="Maybi_TankTrouble.swf">
+        <embed src="Maybi_TankTrouble.swf" id="game"><br>
+        <button onclick="shrinkGame()" style="background-color: rgb(255, 160, 160)">&#8594;&#8592;</button>
+        <button onclick="growGame()" style="background-color: rgb(160, 255, 160)">&#8592;&#8594;</button>
       </center>
     </div>
   </body>
