--- a/Maybi_AgeOfWar.html
+++ b/Maybi_AgeOfWar.html
@@ -93,6 +93,7 @@
         border-width: 4px;
         border-radius: 0px;
         border-color: rgb(85, 85, 85);
+        transition: 0.75s;
       }
 
       @keyframes fadein {
