--- a/Maybi_AgeOfWar2.html
+++ b/Maybi_AgeOfWar2.html
@@ -82,6 +82,7 @@
         border-width: 4px;
         border-radius: 0px;
         border-color: rgb(85, 85, 85);
+        transition: 0.75s;
       }
 
       @keyframes fadein {
