--- a/Maybi_AgeOfWar2.html
+++ b/Maybi_AgeOfWar2.html
@@ -42,7 +42,15 @@
         cursor: default;
         overflow: auto;
         z-index: 1;
+        white-space: nowrap;
+        animation: expandNav 1s;
       }
+
+      @keyframes expandNav {
+        from {width: 0px}
+        to {width: 200px}
+      }
+
       .sidebarNav::-webkit-scrollbar {
         display: none;
       }
@@ -86,8 +94,8 @@
       }
 
       @keyframes fadein {
-        from { opacity: 0}
-        to   { opacity: 1}
+        from {opacity: 0}
+        to {opacity: 1}
       }
 
       button {
