--- a/Maybi_StickWar.html
+++ b/Maybi_StickWar.html
@@ -46,6 +46,13 @@
         cursor: default;
         overflow: auto;
         z-index: 1;
+        white-space: nowrap;
+        animation: expandNav 1s;
+      }
+
+      @keyframes expandNav {
+        from {width: 0px}
+        to {width: 200px}
       }
 
       .sidebarNav::-webkit-scrollbar {
