--- a/Maybi_TankTrouble.html
+++ b/Maybi_TankTrouble.html
@@ -46,6 +46,13 @@
         cursor: default;
         overflow: auto;
         z-index: 1;
+        white-space: nowrap;
+        animation: expandNav 1s;
+      }
+
+      @keyframes expandNav {
+        from {width: 0px}
+        to {width: 200px}
       }
 
       .sidebarNav::-webkit-scrollbar {
@@ -97,8 +104,8 @@
       }
 
       @keyframes fadein {
-        from { opacity: 0}
-        to   { opacity: 1}
+        from {opacity: 0}
+        to {opacity: 1}
       }
 
       button {
