--- a/Maybi_Raze.html
+++ b/Maybi_Raze.html
@@ -178,7 +178,7 @@
     <div class="gameContainer">
       <center>
         <h3 style="font-family: Montserrat">Raze</h3>
-        <embed src="Maybi_Raze.swf" id="game"><br>
+        <embed src="Maybi_Raze.swf" id="game" style="height: 450px; width: 520px;"><br>
         <button onclick="shrinkGame()" style="background-color: rgb(255, 160, 160)">&#8594;&#8592;</button>
         <button onclick="growGame()" style="background-color: rgb(160, 255, 160)">&#8592;&#8594;</button>
       </center>
