--- a/index.html
+++ b/index.html
@@ -105,12 +105,13 @@
        <a href="Maybi_FancyPants2.html" style="animation: fadeIn 1.8s;">Fancy Pants 2</a>
        <a href="Maybi_Flight.html" style="animation: fadeIn 1.9s;">Flight</a>
        <a href="Maybi_Jacksmith.html" style="animation: fadeIn 2s;">Jacksmith</a>
-       <a href="Maybi_Raze.html" style="animation: fadeIn 2.1s;">Raze</a>
-       <a href="Maybi_StickWar.html" style="animation: fadeIn 2.2s;">Stick War</a>
-       <a href="Maybi_StickWar2.html" style="animation: fadeIn 2.3s;">Stick War 2</a>
-       <a href="Maybi_SushiCat.html" style="animation: fadeIn 2.4s;">Sushi Cat</a>
-       <a href="Maybi_TankTrouble.html" style="animation: fadeIn 2.5s;">Tank Trouble</a>
-       <a href="Maybi_Tetris.html" style="animation: fadeIn 2.6s;">Tetris</a>
+       <a href="Maybi_KingdomRush.html" style="animation: fadeIn 2.1s;">Kingdom Rush</a>
+       <a href="Maybi_Raze.html" style="animation: fadeIn 2.2s;">Raze</a>
+       <a href="Maybi_StickWar.html" style="animation: fadeIn 2.3s;">Stick War</a>
+       <a href="Maybi_StickWar2.html" style="animation: fadeIn 2.4s;">Stick War 2</a>
+       <a href="Maybi_SushiCat.html" style="animation: fadeIn 2.5s;">Sushi Cat</a>
+       <a href="Maybi_TankTrouble.html" style="animation: fadeIn 2.6s;">Tank Trouble</a>
+       <a href="Maybi_Tetris.html" style="animation: fadeIn 2.7s;">Tetris</a>
      </div>
    </center>
  </body>
