--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
    <center>
      <h1>Maybi you want to play some games?</h1>
      <div class="previewLinks" id="homeGames">
+       <a href="Maybi_AgeOfDefense3.html" style="animation: fadeIn 1s;">Age of Defense 3</a>
        <a href="Maybi_AgeOfWar.html" style="animation: fadeIn 1s;">Age of War</a>
        <a href="Maybi_AgeOfWar2.html" style="animation: fadeIn 1.1s;">Age of War 2</a>
        <a href="Maybi_BTD3.html" style="animation: fadeIn 1.2s;">Bloons TD 3</a>
