--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
 
      center h1 {
        margin-top: 120px;
-       color: black;
+       color: white;
        font-family: Montserrat;
        width: 90%;
        animation: slideIn 1s;
+       text-shadow: 3px 3px 2px black;
      }
 
      .previewLinks {
