--- a/Maybi_AgeOfDefense3.html
+++ b/Maybi_AgeOfDefense3.html
@@ -19,18 +19,25 @@
       <a href="Maybi_ClickerHeroes.html"><div>Clicker Heroes</div></a>
       <a href="Maybi_DuckHunt.html"><div>Duck Hunt</div></a>
       <a href="Maybi_EarnToDie.html"><div>Earn To Die</div></a>
+      <a href="Maybi_EarnToDie2012.html"><div>Earn To Die 2012</div></a>
       <a href="Maybi_FancyPants.html"><div>Fancy Pants</div></a>
       <a href="Maybi_FancyPants2.html"><div>Fancy Pants 2</div></a>
       <a href="Maybi_Flight.html"><div>Flight</div></a>
       <a href="Maybi_Jacksmith.html"><div>Jacksmith</div></a>
       <a href="Maybi_KingdomRush.html"><div>Kingdom Rush</div></a>
+      <a href="Maybi_Burgeria.html"><div>Papa's Burgeria</div></a>
+      <a href="Maybi_Cupcakeria.html"><div>Papa's Cupcakeria</div></a>
+      <a href="Maybi_Freezeria.html"><div>Papa's Freezeria</div></a>
+      <a href="Maybi_HotDoggeria.html"><div>Papa's Hot Doggeria</div></a>
+      <a href="Maybi_Pancakeria.html"><div>Papa's Pancakeria</div></a>
+      <a href="Maybi_Pizzaria.html"><div>Papa's Pizzaria</div></a>
+      <a href="Maybi_Wingeria.html"><div>Papa's Wingeria</div></a>
       <a href="Maybi_Raze.html"><div>Raze</div></a>
       <a href="Maybi_StickWar.html"><div>Stick War</div></a>
       <a href="Maybi_StickWar2.html"><div>Stick War 2</div></a>
       <a href="Maybi_SushiCat.html"><div>Sushi Cat</div></a>
       <a href="Maybi_TankTrouble.html"><div>Tank Trouble</div></a>
       <a href="Maybi_Tetris.html"><div>Tetris</div></a>
-      <br>
     </div>
     <div class="gameContainer">
       <center>
