--- a/Maybi_2048.html
+++ b/Maybi_2048.html
@@ -58,7 +58,7 @@
       <a href="Maybi_StickWar2.html"><div>Stick War 2</div></a>
       <a href="Maybi_SushiCat.html"><div>Sushi Cat</div></a>
       <a href="Maybi_TankTrouble.html"><div>Tank Trouble</div></a>
-      <a href="Maybi_Tetris.html"><div>Tetris</div></a>
+      <a href="Maybi_Tetris.html"><div>Tetris</div></a><br>
     </div>
     <div class="gameContainer">
       <center>
