--- a/Maybi_Run2.html
+++ b/Maybi_Run2.html
@@ -10,6 +10,7 @@
     </div>
     <div class="sidebarNav" id="sidebarNav">
       <h3 id="sidebarNavTitle">Play Games</h3>
+      <a href="Maybi_2048.html"><div>2048</div></a>
       <a href="Maybi_AgeOfDefense3.html"><div>Age of Defense 3</div></a>
       <a href="Maybi_AgeOfWar.html"><div>Age of War</div></a>
       <a href="Maybi_AgeOfWar2.html"><div>Age of War 2</div></a>
@@ -18,15 +19,26 @@
       <a href="Maybi_BTD5.html"><div>Bloons TD 5</div></a>
       <a href="Maybi_ClickerHeroes.html"><div>Clicker Heroes</div></a>
       <a href="Maybi_DuckHunt.html"><div>Duck Hunt</div></a>
+      <a href="Maybi_DuckLife.html"><div>Duck Life</div></a>
+      <a href="Maybi_DuckLife2.html"><div>Duck Life 2</div></a>
+      <a href="Maybi_DuckLife3.html"><div>Duck Life 3</div></a>
+      <a href="Maybi_DuckLife4.html"><div>Duck Life 4</div></a>
+      <a href="Maybi_DummiesNeverFail.html"><div>Dummies Never Fail</div></a>
       <a href="Maybi_EarnToDie.html"><div>Earn To Die</div></a>
       <a href="Maybi_EarnToDie2.html"><div>Earn To Die 2</div></a>
       <a href="Maybi_EarnToDie2012.html"><div>Earn To Die 2012</div></a>
       <a href="Maybi_EarnToDie2012Part2.html"><div>Earn To Die 2012 Part 2</div></a>
+      <a href="Maybi_ElectricMan.html"><div>Electric Man</div></a>
       <a href="Maybi_FancyPants.html"><div>Fancy Pants</div></a>
       <a href="Maybi_FancyPants2.html"><div>Fancy Pants 2</div></a>
+      <a href="Maybi_CrystalTemple.html"><div>FB & WG Crystal Temple</div></a>
+      <a href="Maybi_ForestTemple.html"><div>FB & WG Forest Temple</div></a>
+      <a href="Maybi_IceTemple.html"><div>FB & WG Ice Temple</div></a>
+      <a href="Maybi_LightTemple.html"><div>FB & WG Light Temple</div></a>
       <a href="Maybi_Flight.html"><div>Flight</div></a>
       <a href="Maybi_Jacksmith.html"><div>Jacksmith</div></a>
       <a href="Maybi_KingdomRush.html"><div>Kingdom Rush</div></a>
+      <a href="Maybi_Pacman.html"><div>Pacman</div></a>
       <a href="Maybi_Burgeria.html"><div>Papa's Burgeria</div></a>
       <a href="Maybi_Cupcakeria.html"><div>Papa's Cupcakeria</div></a>
       <a href="Maybi_Freezeria.html"><div>Papa's Freezeria</div></a>
@@ -35,10 +47,13 @@
       <a href="Maybi_Pizzaria.html"><div>Papa's Pizzaria</div></a>
       <a href="Maybi_Wingeria.html"><div>Papa's Wingeria</div></a>
       <a href="Maybi_Raze.html"><div>Raze</div></a>
+      <a href="Maybi_RedBall4.html"><div>Red Ball 4</div></a>
+      <a href="Maybi_RedBall4Vol2.html"><div>Red Ball 4 Vol. 2</div></a>
+      <a href="Maybi_RedBall4Vol3.html"><div>Red Ball 4 Vol. 3</div></a>
+      <a href="Maybi_RedBall5.html"><div>Red Ball 5</div></a>
       <a href="Maybi_ReturnMan2.html"><div>Return Man 2</div></a>
       <a href="Maybi_Run.html"><div>Run</div></a>
       <a href="Maybi_Run2.html"><div>Run 2</div></a>
-      <a href="Maybi_Run3.html"><div>Run 3</div></a>
       <a href="Maybi_StickWar.html"><div>Stick War</div></a>
       <a href="Maybi_StickWar2.html"><div>Stick War 2</div></a>
       <a href="Maybi_SushiCat.html"><div>Sushi Cat</div></a>
