--- a/Maybi_ReturnMan2.html
+++ b/Maybi_ReturnMan2.html
@@ -62,7 +62,7 @@
     </div>
     <div class="gameContainer">
       <center>
-        <h3 style="font-family: Montserrat">Return Man 2</h3>
+        <h3 style="font-family: Montserrat">Return Man 2 (Demo)</h3>
         <embed src="Maybi_ReturnMan2.swf" id="game" style="height: 450px; width: 640px;"><br>
         <button onclick="shrinkGame()" style="background-color: rgb(255, 160, 160)">&#8594;&#8592;</button>
         <button onclick="growGame()" style="background-color: rgb(160, 255, 160)">&#8592;&#8594;</button>
